=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.11.2 (2008-??-??)

=head2 Improvements

=over

=item*

Added more translations in German and Russian. [Alisa Gdalina]

=item *

Made "Delete this Profile" text more specific depending on location, such as
"Delete this Story" or "Delete this Element Type", etc.  
[Sarah Mercier and Matt Rolf]

=item *

Added the C<is_republish> and C<is_first_publish> methods to
L<Bric::Util::Burner>. [David]

=item *

The CPAN module installer now relies on L<CPAN|CPAN> to determine if a module
was successfully installed and is the proper version number, rather than doing
that work itself. This addresses an issue when installing mod_perl modules,
which would be installed properly but the installer would think that they
weren't. [David]

=item *

Changed autocomplete category selection for stories so that if you have the
C<FULL_SEARCH> config directive turned on, you get wildcard matching to any
part of the uri on your entered string, so typing bar will return /bar and 
/foo/bart . Enter / for a full list of categories. [Paul Orrock]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the loading of WYSIWYG editor callback code in the Apache
configuration. [John Durkin]

=item *

Uploading a media file to a related media element to create a new media
document not works properly when the related media element is a subelement.
Reported by John Durkin (Bug #1364). [David]

=item *

Fixed a bug where an attempt to export a story via SOAP failed due to a bad
method call. Reported by Denny de la Haye. [David]

=item *

Added confirmation on Delete JavaScript action on Workspace and desk. 
Reported by Matt Rolf (Bug 1380). [Sarah Mercier]
  
=item *

Fixed problem with rendering of radio button fields (Bug #1387).  
[Denny de la Haye]

=item *

Fixed L<Bric> to load L<Bric::Config> before anything else, which was causing