@@ -12,7 +12,12 @@ This document lists the Changes to Bricolage introduced with each release.
 
 =over
 
-=item*
+=item *
+
+Added text beneath all buttons in the desk widget to make them more intuitive.
+[Sarah Mercier, Matt Rolf and Michael Herring]
+
+=item *
 
 Added more translations in German and Russian. [Alisa Gdalina]
 
@@ -47,6 +52,11 @@ part of the uri on your entered string, so typing bar will return /bar and
 =head2 Bug Fixes
 
 =over
+
+=item *
+
+Made css improvements concerning the popup menus on the desk widget.
+[Sarah Mercier and Matt Rolf]
 
 =item *
 
